--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.username=youhan
 spring.datasource.password=NeVeRgIvEuP13
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -13,3 +13,4 @@ spring.jpa.hibernate.ddl-auto = none
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
