--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
